--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "xmlbuilder2": "^3.1.1",
     "mammoth": "^1.6.0",
     "dotenv": "^16.3.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "googleapis": "^128.0.0"
   }
 }
