--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-PORT=3000 SMTP_HOST=smtp.gmail.com SMTP_PORT=465 SMTP_SECURE=true MAIL_USER=mneiht998@gmail.com MAIL_PASS=sgop ucxj leph fqqp EMAIL_TO=mneiht998@gmail.com
+PORT=10000 
+SMTP_HOST=smtp.gmail.com 
+SMTP_PORT=465 
+SMTP_SECURE=true 
+MAIL_USER=mneiht998@gmail.com 
+MAIL_PASS=sgopucxjlephfqqp 
+EMAIL_TO=mneiht998@gmail.com
