--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "uuid": "^9.0.0",
     "googleapis": "^128.0.0",
     "node-cron": "^3.0.2",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "jszip": "^3.10.1",
+    "xmldom": "^0.8.10",
+    "omml2mathml": "^0.3.0"
   }
 }
