--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "node-cron": "^3.0.2",
     "xlsx": "^0.18.5",
     "jszip": "^3.10.1",
-    "xmldom": "^0.8.10",
+    "xmldom": "0.8.10",
     "omml2mathml": "1.3.0"
   }
 }
