--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "nodemailer": "^6.9.8",
     "xmlbuilder2": "^3.1.1",
     "mammoth": "^1.6.0",
+    "adm-zip": "^3.0.5",
     "dotenv": "^16.3.0",
     "uuid": "^9.0.0",
     "googleapis": "^128.0.0",
+    "@google/generative-ai": "^0.7.1",
+    "pdf-parse": "^1.1.1",
     "node-cron": "^3.0.2",
     "xlsx": "^0.18.5",
     "jszip": "^3.10.1",
